--- a/index.html
+++ b/index.html
@@ -17,11 +17,91 @@
 
     <body>
         <!-- HEADER -->
-        <header></header>
+        <header>
+            <div class="container-fluid">
+                <nav class="h-100 d-flex align-items-center">
+                    <div class="row align-items-center flex-grow-1">
+                        <div class="col-auto">
+                            <a href="#">
+                                <img class="navbar-brand d-none d-md-none d-lg-block" src="img/logo.svg" alt="logo">
+                            </a>
+                            <!-- <a id="logo-mobile" class="navbar-brand d-block d-lg-none" href="#">
+                                <img src="img/mobile-logo.png" alt="logo-mobile">
+                            </a> -->
+                        </div>
+                        <div class="col">
+                            <form class="d-flex" role="search">
+                                <div class="input-group">
+                                    <span class="input-group-text" id="basic-addon1">
+                                        <i class="bi bi-search"></i>
+                                    </span>                                    
+                                    <input class="form-control me-2" type="search" placeholder="Prova a cercare: Lezioni di Laravel" aria-label="Search">
+                                </div>
+                            </form>
+                        </div>
+                        <div class="col-auto" style="font-size: 1.5rem">
+                            <i class="bi bi-list-task ps-2"></i>
+                            <i class="bi bi-question-circle-fill px-2"></i>
+                            <i class="bi bi-three-dots-vertical px-2"></i>
+                            <i class="bi bi-bell-fill pe-2" style="color: orange;"></i>
+                        </div>
+                    </div>
+                </nav>
+            </div>
+        </header>
 
 
         <!-- MAIN -->
-        <main></main>
+        <main>
+            <div class="container-fluid bg-warning">
+                <div class="row">
+                    <div class="col-auto bg-dark text-light p-4">
+                        <div class="h-75">
+                            <div class="py-2">
+                                <a href="">
+                                    <i class="bi bi-house-fill"></i>
+                                    <span class="ps-2 d-none d-md-none d-lg-inline-block">Home</span>
+                                </a>
+                            </div>
+                            <div class="py-2">
+                                <a href="">
+                                    <i class="bi bi-bar-chart-fill"></i>
+                                    <span class="ps-2 d-none d-md-none d-lg-inline-block">Stats</span>
+                                </a>
+                            </div>
+                            <div class="py-2">
+                                <a href="">
+                                    <i class="bi bi-reception-4"></i>
+                                    <span class="ps-2 d-none d-md-none d-lg-inline-block">Signals</span>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="h-25 d-flex align-items-end">
+                            <div class="py-2">
+                                <a href="">
+                                    <i class="bi bi-gear-fill"></i>
+                                    <span class="ps-2 d-none d-md-none d-lg-inline-block">Admin</span>
+                                </a>
+                            </div>
+                        </div>
+                       
+                        
+                    </div>
+
+                    <div class="col overflow-auto">
+                        <div class="bg-success h-25">
+                            BOOLEAN
+                        </div>
+                        <div class="h-75">
+                            <div class="h-25">1</div>
+                            <div class="h-25">122</div>
+                            <div class="h-25">122</div>
+                            <div class="h-50">122</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </main>
 
 
         <!-- FOOTER -->
