--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                                         <button class="btn btn-outline-light mx-2" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasScrolling" aria-controls="offcanvasScrolling">
                                             <i class="bi bi-plus-lg"></i>
                                         </button>
-                                        <div class="offcanvas offcanvas-end w-50" data-bs-scroll="true" data-bs-backdrop="false" tabindex="-1" id="offcanvasScrolling" aria-labelledby="offcanvasScrollingLabel">
+                                        <div class="offcanvas offcanvas-end w-100" data-bs-scroll="true" data-bs-backdrop="false" tabindex="-1" id="offcanvasScrolling" aria-labelledby="offcanvasScrollingLabel">
                                             <div class="offcanvas-header">
                                                 <h5 class="offcanvas-title" id="offcanvasScrollingLabel">
                                                     Inserisci un nuovo studente
@@ -222,7 +222,7 @@
                         <section class="px-2">
                             <div class="row">
                                 <div class="col-12 col-lg-8">
-                                    <div class="my-data card mt-4" style="width: 100%;">
+                                    <div class="my-data card mt-4 w-100">
                                         <div class="card-header">
                                           <h2>
                                             Prossime classi
@@ -446,7 +446,7 @@
                                             </li>
                                         </ul>
                                     </div>
-                                    <div class="faq card mt-4" style="width: 100%;">
+                                    <div class="faq card mt-4 w-100">
                                         <div class="card-header w-100 px-0">
                                             <h2 class="px-4">
                                                 F.A.Q.
