--- a/index.html
+++ b/index.html
@@ -141,46 +141,35 @@
                                             </div>
                                             <div class="offcanvas-body text-start">
                                                 <form class="row g-3">
-                                                    <div class="col-6">
+                                                    <div class="col-12 col-sm-6">
                                                         <label for="input-name" class="form-label">Nome</label>
                                                         <input type="text" class="form-control" id="input-name">
                                                     </div>
-                                                    <div class="col-6">
+                                                    <div class="col-12 col-sm-6">
                                                         <label for="input-cognome" class="form-label">Cognome</label>
                                                         <input type="text" class="form-control" id="input-cognome">
                                                     </div>
-                                                    <div class="col-6">
+                                                    <div class="col-12 col-sm-6">
                                                       <label for="inputEmail4" class="form-label">Email</label>
                                                       <div class="input-group">
                                                         <div class="input-group-text">@</div>
                                                         <input type="email" class="form-control" id="inputEmail4">
                                                       </div>
                                                     </div>
-                                                    <div class="col-6">
+                                                    <div class="col-12 col-sm-6">
                                                       <label for="inputPassword4" class="form-label">Password</label>
                                                       <input type="password" class="form-control" id="inputPassword4">
-                                                    </div>
-                                                    <div class="col-6">
-                                                        <label for="inputEmail4" class="form-label">Email</label>
-                                                        <div class="input-group">
-                                                          <div class="input-group-text">@</div>
-                                                          <input type="email" class="form-control" id="inputEmail4">
-                                                        </div>
-                                                    </div>
-                                                    <div class="col-6">
-                                                        <label for="inputPassword4" class="form-label">Password</label>
-                                                        <input type="password" class="form-control" id="inputPassword4">
-                                                    </div>
+                                                    </div>                                                    
                                                     <div class="col-12">
-                                                      <label for="inputAddress" class="form-label">Address</label>
+                                                      <label for="inputAddress" class="form-label">Indirizzo</label>
                                                       <input type="text" class="form-control" id="inputAddress">
                                                     </div>
 
-                                                    <div class="col-6">
+                                                    <div class="col-12 col-sm-6">
                                                         <label for="input-city" class="form-label">Città</label>
                                                         <input type="text" class="form-control" id="input-city">
                                                     </div>
-                                                    <div class="col-3">
+                                                    <div class="col-12 col-sm-3">
                                                         <label for="choose-nation" class="form-label">Stato</label>
                                                         <select class="form-select" id="choose-nation">
                                                             <option selected>Scegli...</option>
@@ -189,7 +178,7 @@
                                                             <option value="3">Japan</option>
                                                           </select>
                                                     </div>
-                                                    <div class="col-3">
+                                                    <div class="col-12 col-sm-3">
                                                         <label for="input-cap" class="form-label">CAP</label>
                                                         <input type="text" class="form-control" id="input-cap">
                                                     </div>
