--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
                                 </div>
 
                                 <!-- TO DO -->
-                                <div class="col-12 col-lg-4">
+                                <div class="col-12 col-lg-4 mb-4">
                                     <div>
                                         <div class="todo card mt-4 w-100">
                                             <div class="card-header">
@@ -507,7 +507,7 @@
                                         </div>
                                     </div>
 
-                                    <!-- SATISTICHE -->
+                                    <!-- STATISTICHE -->
                                     <div>
                                         <div class="card mt-4 w-100">
                                             <img src="img/stats.jpeg" class="card-img-top" alt="...">
